# nell

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/nell/: nell.cpp
src/nell/core/: camera.cpp  camera.hpp  framebuffer.hpp  mesh.cpp  mesh.hpp  random.hpp  texture_manager.cpp  texture_manager.hpp
src/nell/core/shader_utils/: shader.cpp  shader.hpp
src/shader/: accumulate.frag  copy.frag  default.vert  fragment.glsl  pathtrace.frag  pathtrace.vert  preview.frag  vertex.glsl
src/utils/: random.hpp  shaderInclude.hpp
